# blockchain-recsys-project

./: .gitignore  LICENSE  README.md  pyproject.toml  token_price.py
frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/resources/styles/: base.css
frontend/resources/styles/themes/: dark.css  default.css
frontend/src/: index.html  styles.less
frontend/src/app/: app.component.html  app.component.less  app.component.ts  app.module.ts  app.routes.ts  shorten.pipe.ts
frontend/src/app/base/: destroyer.ts  urls.ts
frontend/src/app/pages/: home.component.ts  recommendations.component.ts
frontend/src/environments/: environment.development.ts  environment.ts
frontend/src/shared/services/: theme.service.ts
research/: Final Model.ipynb  RecSys.ipynb  diversification.py  promt.py  wallet_parser.py
service/api/: app.py  auth.py  exception_handlers.py  views.py
